2007-08-06  Vinicius Jose Latorre  <viniciusig@ig.com.br>

	* printing.el: Require lpr and ps-print when loading printing package.
	Reported by Glenn Morris <rgm@gnu.org>.
	(pr-update-menus): Docstring fix.

2007-08-03  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* printing.el: Evaluate require only during compilation.
	(pr-version): New version 6.9.1.
	(deactivate-mark): Replace (defvar VAR nil) by (defvar VAR).
	(pr-global-menubar): Fix code.

2007-08-03  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-ext.el (math-get-value,math-get-sdev)
	(math-contains-sdev): New functions.

	* calc/calc-graph.el (calc-graph-format-data)
	(calc-graph-add-curve): Check for error forms.
	(calc-graph-set-styles): Add option for error forms.

2007-08-03  Miles Bader  <miles@gnu.org>

	* vc-hooks.el (vc-handled-backends): Change capitalization of VC
	backend names for new backends to `Git', `Hg', and `Bzr'.
	* vc-hg.el (vc-hg-dired-state-info): Use `Hg' as VC backend name,
	not `HG'.
	* vc-git.el (vc-git-dired-state-info): Use `Git' as VC backend
	name, not `GIT'.
	* vc-bzr.el (vc-bzr-dir-state, vc-bzr-dired-state-info)
	(vc-bzr-unload-hook): Use `Bzr' as VC backend name, not `BZR'.

2007-08-02  Richard Stallman  <rms@gnu.org>

	* mail/rmailsum.el (rmail-make-summary-line): Find end of msg number
	to update deleted flag.

	* cus-edit.el (customize-apropos, customize-apropos-options)
	(customize-apropos-faces, customize-apropos-groups): Improve prompt.

	* menu-bar.el (menu-bar-help-menu): Add "About GNU" menu item.

	* startup.el (fancy-splash-head, startup-echo-area-message):
	Change message text.

	* emulation/tpu-edt.el (next-line-internal): Setting deleted.
	All callers use line-move.

	* progmodes/compile.el (compilation-find-buffer): Return current
	buffer immediately if suitable.
	(compile, compilation-buffer-name, compilation-start): Doc fixes.

2007-07-31  Daiki Ueno  <ueno@unixuser.org>

	* faces.el (face-normalize-spec): New function.