@@ -1,3 +1,10 @@
+2007-08-08  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* ps-print.el (ps-default-fg, ps-default-bg): Docstring fix.
+	(ps-begin-job): Use ps-default-fg and ps-default-bg only when
+	ps-print-color-p is neither nil nor black-white.  Reported by Christian
+	Schlauer <cs-muelleimer-rubbish.bin@arcor.de>.
+
 2007-08-06  Vinicius Jose Latorre  <viniciusig@ig.com.br>
 
 	* printing.el: Require lpr and ps-print when loading printing package.
